--- a/Start Node/ChatingWeb/package.json
+++ b/Start Node/ChatingWeb/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
     "ngrok": "^3.1.1",
     "path": "^0.12.7",
